crates/cli/tests/snapshots/status__status_json_redacts_secret_context.snap
---
source: crates/cli/tests/status.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "{\"overall\":\"failed\",\"daemon\":{\"state\":\"disabled\",\"launch_agent\":\"missing\",\"socket\":\"missing\",\"failure\":false},\"integrations\":{\"dns\":\"missing\",\"ports\":{\"state\":\"inactive\",\"evidence\":\"pfctl\",\"expected_http_port\":null,\"expected_https_port\":null,\"active_http_port\":null,\"active_https_port\":null,\"observed_at\":\"<timestamp>\"},\"ca\":\"missing\"},\"managed_resources\":[{\"name\":\"mailpit\",\"track\":\"1\",\"desired\":\"installed\",\"status\":\"running\",\"projects\":0,\"version\":\"1.20.0-pv1\",\"failure\":false},{\"name\":\"mysql\",\"track\":\"8.0\",\"desired\":\"installed\",\"status\":\"running\",\"projects\":0,\"version\":\"8.0.36-pv1\",\"failure\":false},{\"name\":\"php\",\"track\":\"8.4\",\"desired\":\"installed\",\"status\":\"not-running\",\"projects\":0,\"version\":\"8.4.8-pv1\",\"failure\":false},{\"name\":\"postgres\",\"track\":\"16\",\"desired\":\"installed\",\"status\":\"running\",\"projects\":0,\"version\":\"16.4-pv1\",\"failure\":false},{\"name\":\"redis\",\"track\":\"7\",\"desired\":\"installed\",\"status\":\"running\",\"projects\":0,\"version\":\"7.2.5-pv1\",\"failure\":false},{\"name\":\"rustfs\",\"track\":\"1\",\"desired\":\"installed\",\"status\":\"running\",\"projects\":0,\"version\":\"1.0.0-pv1\",\"failure\":false}],\"runtimes\":[{\"subject\":\"worker:8.4\",\"status\":\"running\",\"message\":\"PHP worker is ready\",\"observed_at\":\"<timestamp>\",\"failure\":false}],\"projects\":[],\"recent_errors\":[{\"id\":\"job_000001\",\"kind\":\"reconcile\",\"scope\":\"resource:redis:7\",\"started_at\":\"<timestamp>\",\"finished_at\":\"<timestamp>\",\"error\":\"Redis failed readiness\"}],\"log_directory\":\"<tempdir>/home/.pv/logs\"}\n",
    stderr: "",
}
