crates/cli/tests/snapshots/status__status_prefers_ignored_php_extension_over_other_project_env_warnings.snap
---
source: crates/cli/tests/status.rs
expression: snapshot
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "PV status\nOverall: ok\nDaemon: disabled\n  LaunchAgent: missing\n  Socket: missing\nIntegrations:\n  DNS: missing\n  Ports: inactive\n  CA: missing\nLogs: <tempdir>/home/.pv/logs\nManaged Resources:\n  none\nProjects:\n  app.test env=warning ignored unsupported PHP extension `missing`; ignored unsupported PHP extension `typo`\nRecent errors:\n  none\n",
        stderr: "",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "{\"overall\":\"ok\",\"daemon\":{\"state\":\"disabled\",\"launch_agent\":\"missing\",\"socket\":\"missing\",\"failure\":false},\"integrations\":{\"dns\":\"missing\",\"ports\":{\"state\":\"inactive\",\"evidence\":\"pfctl\",\"expected_http_port\":null,\"expected_https_port\":null,\"active_http_port\":null,\"active_https_port\":null,\"observed_at\":\"<timestamp>\"},\"ca\":\"missing\"},\"managed_resources\":[],\"runtimes\":[],\"projects\":[{\"mode\":\"served\",\"slug\":\"project\",\"hostname\":\"app.test\",\"env_status\":\"warning\",\"message\":\"ignored unsupported PHP extension `missing`; ignored unsupported PHP extension `typo`\",\"observed_at\":\"<timestamp>\"}],\"recent_errors\":[],\"log_directory\":\"<tempdir>/home/.pv/logs\"}\n",
        stderr: "",
    },
)
