crates/cli/tests/snapshots/status__status_reports_current_launch_agent_with_stale_socket_as_down.snap
---
source: crates/cli/tests/status.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV status\nOverall: failed\nDaemon: down\n  LaunchAgent: current\n  Socket: unhealthy\nIntegrations:\n  DNS: missing\n  Ports: inactive\n    repair: pv ports:install\n  CA: missing\nLogs: <tempdir>/home/.pv/logs\nManaged Resources:\n  none\nProjects:\n  none\nRecent errors:\n  none\n",
    stderr: "",
}
