crates/cli/tests/snapshots/status__status_reports_disabled_daemon_without_setup_on_a_terminal.snap
---
source: crates/cli/tests/status.rs
expression: terminal_output.stdout
---
[pv] status                                                                                   v0.2.5
────────────────────────────────────────────────────────────────────────────────────────────────────

○  PV is disabled
○  Daemon disabled
   LaunchAgent missing  ·  Socket missing

INTEGRATIONS
○  DNS    missing
○  Ports  inactive
○  CA     missing

MANAGED RESOURCES
○  none

PROJECTS
○  none

RECENT ERRORS
○  none

○  PV is disabled
   Logs: <tempdir>/home/.pv/logs
