crates/cli/tests/snapshots/status__status_reports_dns_and_ports_repair_required_as_failure.snap
---
source: crates/cli/tests/status.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV status\nOverall: failed\nDaemon: disabled\n  LaunchAgent: missing\n  Socket: missing\nIntegrations:\n  DNS: prepared-only\n  Ports: inactive\n    repair: pv ports:install\n  CA: current\nLogs: <tempdir>/home/.pv/logs\nManaged Resources:\n  none\nProjects:\n  none\nRecent errors:\n  none\n",
    stderr: "",
}
