crates/cli/tests/snapshots/status__status_reports_failed_jobs_as_failure.snap
---
source: crates/cli/tests/status.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV status\nOverall: failed\nDaemon: disabled\n  LaunchAgent: missing\n  Socket: missing\nIntegrations:\n  DNS: missing\n  Ports: inactive\n    repair: `pv ports:install`\n  CA: missing\nLogs: <tempdir>/home/.pv/logs\nManaged Resources:\n  none\nProjects:\n  none\nRecent errors:\n  job_000001 reconcile project:acme failed: Gateway failed to start\n",
    stderr: "",
}
